--- a/krant.html
+++ b/krant.html
@@ -11,10 +11,8 @@
     <div class="grid-container">
         <div class="grid-item item1"><img src="assets_lab/images/menu.jpg" alt="hallo daan"></div>
         <div class="grid-item item2"><img src="assets_lab/images/banner.jpg" alt="doei daan"></div>
-        <div class="grid-item item3"><img src="assets_lab/images/commando.jpg" alt="leger daan"></div>
-        <div class="grid-item item4"><img src="assets_lab/images/max-verstappen.jpg" alt="racer daan"></div>
-        <div class="grid-item item5">5</div>
-        <div class="grid-item item6">6</div>
+        <div class="grid-item item3"><img src="assets_lab/images/commando.jpg" alt="leger daan"> <img src="assets_lab/images/max-verstappen.jpg" alt="racer daan"></br><img src="assets_lab/images/griepvaccin.jpg" alt="ziek daan"><img src="assets_lab/images/zonovergoten.jpg" alt="zon daan"><img src="assets_lab/images/schandaal.jpg" alt="koele daan"></div>
+        <div class="grid-item item4"><img src="assets_lab/images/net-binnen.jpg" alt="nieuws daan"></div>
     </div>
 </body>
 </html>
