Start opdracht grid
een start gemaakt

--- a/grid.html
+++ b/grid.html
@@ -8,6 +8,13 @@
     <title>Over'all</title>
 </head>
 <body>
-    <p>hallo</p>
+    <div class="grid container">
+        <div class="grid-item item1"><img src="assets/img/logo.png" alt="logo daan"></div>
+        <div class="grid-item item2"><div class="banner"><img src="assets/img/banner.jpg" alt="banner daan"></div></div>
+        <div class="grid-item item3"></div>
+        <div class="grid-item item4"><img src="assets/img/fade-slider.png" alt="slider daan"></div>
+        <div class="grid-item item5"><img src="assets/img/nivo-slider.png" alt="nivo daan"></div>
+        <div class="grid-item item6"><img src="assets/img/bonus-3d-slider.png" alt="3d slider daan"></div>
+    </div>
 </body>
 </html>
