--- a/grid.html
+++ b/grid.html
@@ -8,13 +8,13 @@
     <title>Over'all</title>
 </head>
 <body>
-    <div class="grid container">
+    <div class="grid-container">
         <div class="grid-item item1"><img src="assets/img/logo.png" alt="logo daan"></div>
-        <div class="grid-item item2"><div class="banner"><img src="assets/img/banner.jpg" alt="banner daan"></div></div>
-        <div class="grid-item item3"></div>
-        <div class="grid-item item4"><img src="assets/img/fade-slider.png" alt="slider daan"></div>
-        <div class="grid-item item5"><img src="assets/img/nivo-slider.png" alt="nivo daan"></div>
-        <div class="grid-item item6"><img src="assets/img/bonus-3d-slider.png" alt="3d slider daan"></div>
+        <div class="grid-item item2"><img src="assets/img/banner.jpg" alt="banner daan"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas voluptatem ratione, officia nostrum unde ea! Repellendus ullam necessitatibus voluptates nostrum provident commodi corrupti tempore ab, eaque quod ipsum quaerat. Nulla.</p></div>
+        <div class="grid-item item4"><img src="assets/img/fade-slider.png" alt="slider daan"><h2>Professional Fade slider</h2><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis voluptatibus reiciendis fuga dolorum itaque ducimus ipsam fugit explicabo quod veritatis similique quam, iste veniam, ut nesciunt dolorem necessitatibus nulla suscipit?</p></div>
+        <div class="grid-item item5"><img src="assets/img/nivo-slider.png" alt="nivo daan"><h2>Awesome Nivo Slider</h2><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A qui ullam porro alias nobis repellat hic sint asperiores sequi. Et quasi expedita debitis dolorum numquam exercitationem corporis ullam eos quidem?</p></div>
+        <div class="grid-item item6"><img src="assets/img/bonus-3d-slider.png" alt="3d slider daan"><h2>OverALL Bonus 3D Slider!</h2><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem aperiam totam adipisci? Labore ut, molestias accusamus eligendi qui voluptates et ducimus eius voluptate eos ad nemo optio odit molestiae sunt.</p></div>
+        <div class="grid-item item7"><p>Daan Masson</p></div>
     </div>
 </body>
 </html>
