--- a/grid.html
+++ b/grid.html
@@ -10,11 +10,14 @@
 <body>
     <div class="grid-container">
         <div class="grid-item item1"><img src="assets/img/logo.png" alt="logo daan"></div>
-        <div class="grid-item item2"><img src="assets/img/banner.jpg" alt="banner daan"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas voluptatem ratione, officia nostrum unde ea! Repellendus ullam necessitatibus voluptates nostrum provident commodi corrupti tempore ab, eaque quod ipsum quaerat. Nulla.</p></div>
-        <div class="grid-item item4"><img src="assets/img/fade-slider.png" alt="slider daan"><h2>Professional Fade slider</h2><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis voluptatibus reiciendis fuga dolorum itaque ducimus ipsam fugit explicabo quod veritatis similique quam, iste veniam, ut nesciunt dolorem necessitatibus nulla suscipit?</p></div>
-        <div class="grid-item item5"><img src="assets/img/nivo-slider.png" alt="nivo daan"><h2>Awesome Nivo Slider</h2><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A qui ullam porro alias nobis repellat hic sint asperiores sequi. Et quasi expedita debitis dolorum numquam exercitationem corporis ullam eos quidem?</p></div>
-        <div class="grid-item item6"><img src="assets/img/bonus-3d-slider.png" alt="3d slider daan"><h2>OverALL Bonus 3D Slider!</h2><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem aperiam totam adipisci? Labore ut, molestias accusamus eligendi qui voluptates et ducimus eius voluptate eos ad nemo optio odit molestiae sunt.</p></div>
-        <div class="grid-item item7"><p>Daan Masson</p></div>
+        <div class="grid-item item2"><img src="assets/img/banner.jpg" alt="banner daan"></div>
+        <div class="grid-item item3"><h1 id="banner-header">Let's talk business</h1><p id="banner-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas voluptatem ratione, officia nostrum unde ea! Repellendus ullam necessitatibus voluptates nostrum provident commodi corrupti tempore ab, eaque quod ipsum quaerat. Nulla. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil cupiditate nesciunt est doloremque recusandae, ipsa deserunt adipisci laborum odio temporibus atque, quo fugiat facere aliquid corrupti illum nemo, esse quibusdam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nisi, libero vitae molestias minus, vel laborum omnis quisquam impedit dignissimos eos et alias in. Provident sunt ipsam nihil accusantium totam!</p></div>
+        <div class="grid-item item4"><img src="assets/img/fade-slider.png" alt="slider daan"><h2>Professional Fade slider</h2><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis voluptatibus reiciendis fuga dolorum itaque ducimus ipsam fugit explicabo quod veritatis similique quam, iste veniam, ut nesciunt dolorem necessitatibus nulla suscipit?</p><a id="link1" href=#>Click for more info</a></div>
+        <div class="grid-item item5"><img src="assets/img/nivo-slider.png" alt="nivo daan"><h2>Awesome Nivo Slider</h2><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A qui ullam porro alias nobis repellat hic sint asperiores sequi. Et quasi expedita debitis dolorum numquam exercitationem corporis ullam eos quidem?</p><a id="link2" href=#>Click for more info</a></div>
+        <div class="grid-item item6"><img src="assets/img/bonus-3d-slider.png" alt="3d slider daan"><h2>OverALL Bonus 3D Slider!</h2><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem aperiam totam adipisci? Labore ut, molestias accusamus eligendi qui voluptates et ducimus eius voluptate eos ad nemo optio odit molestiae sunt.</p><a id="link3" href=#>Click for more info</a></div>
+        <div class="grid-item item8"><p>Daan Masson</p></div>
+        <div class="grid-item background1"></div>
+        <div class="grid-item background2"></div>
     </div>
 </body>
 </html>
