--- a/grid.html
+++ b/grid.html
@@ -18,6 +18,17 @@
         <div class="grid-item item8"><p>Daan Masson</p></div>
         <div class="grid-item background1"></div>
         <div class="grid-item background2"></div>
+        <div class="grid-item item9">
+            <ul>
+                <li><a href="grid.html">Home</a></li>
+                <li><a href="auto.html">Auto's</a></li>
+                <li><a href="kleding.html">Kleding</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Gallery</a></li>
+                <li><a href="#">Shortcodes</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
